# django-htmx-tailwind

./: README.md  pyproject.toml
config/: settings.py  urls.py
static/CACHE/css/: output.4b96e02b04f2.css  output.c093aa3ebc2f.css
templates/: _base.html  index.html  todo.html
todos/: urls.py  views.py
